Closed Bug 81414 Opened 23 years ago Closed 23 years ago

transformiix standalone won't build

Categories

(Core :: XSLT, defect, P3)

defect

Tracking

()

VERIFIED FIXED
mozilla0.9.2

People

(Reporter: axel, Assigned: axel)

References

Details

Attachments

(2 files)

In landing XSLT module in default builds, peterv had to break transformiix
standalone. As that day was horked anyway, I decided to turn the world upside
down.
MOZ_XSL should be !TX_EXE.
TX_EXE should be a AC_SUBST(TX_EXE) and a line in autoconf.mk.in, so that
building in subdirs works like charm. But we don't need a configure switch.
With the coming patch, setting TX_EXE in mozconfig builds standalone.
Setting TX_EXE in env should work for win, can't test that.
r=peterv
setting milestone, priority, accept this.
Chis, could you review the changes to the build system?
Changes are summarized in the first comment.

Thanx

Axel
Status: NEW → ASSIGNED
Priority: -- → P3
Target Milestone: --- → mozilla0.9.2
sr=cls
long, but consistent and fairly simple.  I couldn't find anything wrong with it.
 r/sr=scc (on the patch from 06/05/01 02:55)
a=dbaron for trunk checkin (on behalf of drivers)
Blocks: 83989
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
bitching buttons, verfication spam
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: