bug 81414, build standalone transformiix, MOZ_XSL->!TX_EXE, r=peterv,cls, sr=scc, a=dbaron (on behalf of drivers)